--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,21 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <link href="https://fonts.googleapis.com/css2?family=Muli:ital,wght@1,300&family=Philosopher:ital@1&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+<!--Jquery-->
+<script type="text/javascript" src="assets/jquery.min.js"></script>
+  <!--Bootstrap-->
+  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css"/>
+  <script type="text/javascript"  src="assets/bootstrap/js/bootstrap.min.js"></script>
+  <!--FontAwesome-->  
+  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <!--grid de boostrap-->
+<link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css" />
   <meta charset="utf-8">
-  <title>ProyectoInocisa</title>
+  <title>ProyectoIncentivo</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
