Agregadas secciones de animaciones, fotos relacionadas con la empresa, efectos hover y apartado responsivo

--- a/src/index.html
+++ b/src/index.html
@@ -13,10 +13,10 @@
   <!--grid de boostrap-->
 <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css" />
   <meta charset="utf-8">
-  <title>ProyectoIncentivo</title>
+  <title>Instituto del Noroeste en Ciencias de la Salud</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/png" sizes="96x96" href="../assets/favicon-96x96.png">
 </head>
 <body>
   <app-root></app-root>
